Wed Nov  8 02:46:54 1995  Theodore Y. Ts'o  <tytso@dcl>

	* alt_prof.c (krb5_free_realm_params): Free the realm_kdc_ports
		element of the structure.

Fri Oct  6 00:30:16 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

	* logger.c (klog_vsyslog): Make the logs less verbose, by omitting
		the hostname, pid, etc. information.

Thu Oct  5 19:46:40 1995  Theodore Y. Ts'o  <tytso@dcl>

	* alt_prof.c (krb5_read_realm_params): Remove the profile
		relation, since it's really a bad idea.  Removed the
		"port" and "secondary_port" relations, and replaced them
		with the "kdc_port" relation, which takes a list of ports.

Mon Oct  2 15:08:53 1995  Theodore Y. Ts'o  <tytso@dcl>

	* logger.c (krb5_klog_init): If the log file can't be opened,
		print an intelligent error message.

Thu Oct  5 12:06:35 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* alt_prof.c (krb5_read_realm_params): If secure flag is set in
		context, do not allow for environment variables to specify
		configuration files.

Tue Sep 26 02:31:38 1995  Mark Eichin  <eichin@cygnus.com>

	* adm_conn.c (kadm_get_creds): zero out creds->server after
	freeing it to protect later attempts.

Fri Sep 29 17:06:18 1995  Theodore Y. Ts'o  <tytso@dcl>

	* logger.c: #ifdef the entire file so it's not built under Windows.

Tue Sep 27 12:00:00 1995    <jrivlin@fusion.com>

	* adm_kw_dec.c (krb5_adm_proto_to_dbent): Routine removed for 
		Windows and Mac to match with the prototype.

	* adm_kw_dec.c (krb5_adm_dbent_to_proto): Routine removed for 
		Windows and Mac to match with the prototype.

Tue Sep 26 16:24:00 1995    <tytso@rsts-11.mit.edu>

	* alt_prof.c (krb5_read_realm_params): On an error, initialize the
		returned rparams pointer to NULL.

Mon Sep 25 16:54:18 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 
