@@ -1,3 +1,7 @@
+Sun Dec 10 11:02:56 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* str_conv.c (krb5_input_flag_to_string): Add new routine.
+
 Wed Nov  8 02:46:54 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* alt_prof.c (krb5_free_realm_params): Free the realm_kdc_ports
